Details
-
Bug
-
Resolution: Fixed
-
Major
-
0.4.15-dev-7828-g7dd8a30 https://github.com/reactos/reactos/commit/7dd8a30cf957788db0d80352c9e3bf0f6eae9307
Description
reactos-bootcd-0.4.15-dev-7968-g24a56f8-x86-gcc-lin-dbg
Recurrent random problem (race condition in msgina ?) : CORE-4331, CORE-3098
Installation on a clean partition (formatted during setup)
During 1st boot, stuck at "loading personal settings" screen- Log shows :
(dll/win32/userenv/profile.c:2056) Loading profile S-1-5-21-556636014-1779110647-1827795332-500 |
NDIS_STATUS_MEDIA_CONNECT
|
(ntoskrnl/config/cmapi.c:2461) Open sub keys: 91 |

Attachments
Issue Links
- blocks
-
CORE-10705 Logging off and back on will cause an assertion
-
- Untriaged
-
- is duplicated by
-
CORE-19609 bootcd stuck endlessly during 3rd stage bootup with "Loading your personal settings..."
-
- Resolved
-