ntoskrnl/config/cmapi.c
@@ -2216,6 +2216,9 @@ CmUnloadKey(
 
     DPRINT("CmUnloadKey(%p, %lx)\n", Kcb, Flags);
 
+    /* Ensure the registry is locked exclusively for the calling thread */
+    CMP_ASSERT_EXCLUSIVE_REGISTRY_LOCK();
+
     /* Get the hive */
     Hive = Kcb->KeyHive;
     Cell = Kcb->KeyCell;
@@ -2243,7 +2246,7 @@ CmUnloadKey(
     {
         if (Flags != REG_FORCE_UNLOAD)
         {
-            if (CmpEnumerateOpenSubKeys(Kcb, FALSE, TRUE, FALSE) != 0)
+            if (CmpEnumerateOpenSubKeys(Kcb, TRUE, FALSE) != 0)
             {
                 /* There are open subkeys but we don't force hive unloading, fail */
                 Hive->HiveFlags &= ~HIVE_IS_UNLOADING;
@@ -2252,7 +2255,7 @@ CmUnloadKey(
         }
         else
         {
-            if (CmpEnumerateOpenSubKeys(Kcb, TRUE, TRUE, TRUE) != 0)
+            if (CmpEnumerateOpenSubKeys(Kcb, TRUE, TRUE) != 0)
             {
                 /* There are open subkeys that we cannot force to unload, fail */
                 Hive->HiveFlags &= ~HIVE_IS_UNLOADING;
@@ -2293,14 +2296,8 @@ CmUnloadKey(
     Kcb->Delete = TRUE;
     CmpRemoveKeyControlBlock(Kcb);
 
-    if (Flags != REG_FORCE_UNLOAD)
-    {
-        /* Release the KCB locks */
-        CmpReleaseTwoKcbLockByKey(Kcb->ConvKey, Kcb->ParentKcb->ConvKey);
-
-        /* Release the hive loading lock */
-        ExReleasePushLockExclusive(&CmpLoadHiveLock);
-    }
+    /* Release the hive loading lock */
+    ExReleasePushLockExclusive(&CmpLoadHiveLock);
 
     /* Release hive lock */
     CmpUnlockRegistry();
@@ -2341,7 +2338,6 @@ ULONG
 NTAPI
 CmpEnumerateOpenSubKeys(
     _In_ PCM_KEY_CONTROL_BLOCK RootKcb,
-    _In_ BOOLEAN LockHeldExclusively,
     _In_ BOOLEAN RemoveEmptyCacheEntries,
     _In_ BOOLEAN DereferenceOpenedEntries)
 {
@@ -2353,6 +2349,9 @@ CmpEnumerateOpenSubKeys(
     ULONG SubKeys = 0;
 
     DPRINT("CmpEnumerateOpenSubKeys() called\n");
+
+    /* Ensure the registry is locked exclusively for the calling thread */
+    CMP_ASSERT_EXCLUSIVE_REGISTRY_LOCK();
 
     /* The root key is the only referenced key. There are no referenced sub keys. */
     if (RootKcb->RefCount == 1)
@@ -2401,9 +2400,6 @@ CmpEnumerateOpenSubKeys(
                         if (DereferenceOpenedEntries &&
                             !(CachedKcb->ExtFlags & CM_KCB_READ_ONLY_KEY))
                         {
-                            /* Registry needs to be locked down */
-                            CMP_ASSERT_EXCLUSIVE_REGISTRY_LOCK();
-
                             /* Flush any notifications */
                             CmpFlushNotifiesOnKeyBodyList(CachedKcb, TRUE); // Lock is already held
 
@@ -2431,20 +2427,11 @@ CmpEnumerateOpenSubKeys(
                     }
                     else if ((CachedKcb->RefCount == 0) && RemoveEmptyCacheEntries)
                     {
-                        /* Lock the cached KCB of subkey before removing it from cache entries */
-                        if (!LockHeldExclusively)
-                            CmpAcquireKcbLockExclusive(CachedKcb);
-
                         /* Remove the current key from the delayed close list */
                         CmpRemoveFromDelayedClose(CachedKcb);
 
                         /* Remove the current cache entry */
-                        // Lock is either held by ourselves or registry is locked exclusively
-                        CmpCleanUpKcbCacheWithLock(CachedKcb, LockHeldExclusively);
-
-                        /* Unlock the cached KCB if it was done by ourselves */
-                        if (!LockHeldExclusively)
-                            CmpReleaseKcbLock(CachedKcb);
+                        CmpCleanUpKcbCacheWithLock(CachedKcb, TRUE);
 
                         /* Restart, because the hash list has changed */
                         Entry = CmpCacheTable[i].Entry;
